--- a/package.json
+++ b/package.json
@@ -21,5 +21,21 @@
   "bugs": {
     "url": "https://github.com/funktionswerk/loopback-bakery/issues"
   },
-  "homepage": "https://github.com/funktionswerk/loopback-bakery#readme"
+  "homepage": "https://github.com/funktionswerk/loopback-bakery#readme",
+  "dependencies": {},
+  "devDependencies": {
+    "@types/chai": "^3.4.34",
+    "@types/mocha": "^2.2.39",
+    "@types/node": "^7.0.5",
+    "chai": "^3.5.0",
+    "grunt": "^1.0.1",
+    "grunt-cli": "^1.2.0",
+    "grunt-contrib-clean": "^1.0.0",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-mocha-test": "^0.13.2",
+    "grunt-ts": "^6.0.0-beta.11",
+    "include-all": "^3.0.0",
+    "mocha": "^3.2.0",
+    "typescript": "^2.1.5"
+  }
 }
