--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {},
   "devDependencies": {
     "@types/chai": "^3.4.34",
+    "@types/loopback": "^3.1.0-next.1",
     "@types/mocha": "^2.2.39",
     "@types/node": "^7.0.5",
     "chai": "^3.5.0",
@@ -36,6 +37,8 @@
     "grunt-ts": "^6.0.0-beta.11",
     "include-all": "^3.0.0",
     "mocha": "^3.2.0",
+    "sinon": "^1.17.7",
+    "source-map-support": "^0.4.11",
     "typescript": "^2.1.5"
   }
 }
